Fixed issue with the website scrolling not being smooth on mobile devices

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,14 +7,13 @@ body {
     height: 100%;
 }
 
-html,body {
+html {
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
 }
-
 
 
 .navbar-default{
